2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add support for the new queue management option
	to only build one revisionwork at a time.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: DeleteHost: use DBHost's extension method
	to delete the host, this way we also delete records in all related
	tables.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Added FindHost.
	* WebServices.wsdl: Regenerated.

2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add EditHostWithPassword method
	to set the password as well for the host.

	* WebServices.wsdl: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Be more apache friendly.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: When getting login data, check both
	cookies (set if we were redirected to from the web ui)
	and url (set if the web ui is downloading).

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add a ExecuteDeletionDirectives
	method.

	* WebServices.wsdl: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Move GetFullPath to the
	MonkeyWrench.Database assembly.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Use TransmitFile when we have a file
	to transmit instead of sending the file manually.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx: Added ExecuteScheduler.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx: Add support for uploading compressed files.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Authentication.cs: Protect against a few NREs.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Add support for downloading workfiles
	by name.
